--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,14 @@ body {
   background-color: #f2f2f2;
 }
 
+.wrapper {
+  display: flex;
+  width: 100%;
+  min-width: 768px;
+  max-width: 1200px;
+  background-color: white;
+}
+
 a {
   text-decoration: none;
 }
