--- a/css/style.css
+++ b/css/style.css
@@ -13,26 +13,82 @@ body {
 }
 
 .wrapper {
-  display: flex;
   width: 100%;
   min-width: 768px;
   max-width: 1200px;
   background-color: white;
+  margin: 0 auto;
 }
 
-a {
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.main-header {
+  position: relative;
+}
+
+.header-logo {
+  position: absolute;
+  z-index: 1;
+  width: 138px;
+  height: 70px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+}
+
+.header-logo a {
+  display: block;
+  width: 138px;
+  height: 70px;
+  font-size: 0;
+  background-image: url("../img/index-logo.png");
+}
+
+.header-menu ul {
+  display: flex;
+  list-style: none;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.menu-list li {
+  width: 20%;
+  padding: 15px 0;
+}
+
+.menu-list li:nth-child(4n+1) {
+margin-left: 6%;
+}
+
+.menu-list li:nth-child(4n) {
+margin-right: 6%;
+text-align: right;
+}
+
+.menu-list li:nth-child(4n+3) {
+margin-left: 8%;
+text-align: right;
+letter-spacing: 0.5px;
+}
+
+.menu-list a {
+  font-weight: bold;
+  color: black;
   text-decoration: none;
 }
 
-.header-menu {
-  color: black;
-  background-color: #ffffff;
-}
-
-.menu-list {
-  list-style: none;
-  font-weight: bold;
-}
 
 .menu-list a {
   color: #000000;
@@ -46,15 +102,109 @@ a {
   color: rgba(0, 0, 0, 0.3);
 }
 
-.main-text {
-  color: #000000;
-  text-align: center;
+.main-photo {
+  position: relative;
+  width: 100%;
+  height: 508px;
+  background-color: #6c7780;
+  background-image: url("../img/main-foto.jpg");
+  background-repeat: no-repeat;
+  background-position: center 21%;
+  background-size: cover;
 }
+
+.main-photo img {
+  position: absolute;
+  top: 76px;
+  right: 0;
+  left: 0;
+  margin: 0 auto;
+}
+
+.main-photo::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 56px;
+  background-image: url("../img/hidebottom-photo.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 56px;
+}
+
+.main-text {
+  padding-top: 61px;
+  padding-bottom: 50px;
+  text-align: center;
+  color: #000000;
+}
+
+.main-text-sedona {
+  display: block;
+  width: 442px;
+  margin: 0 auto 27px;
+  font-size: 21px;
+}
+
+.main-text p {
+  margin: 0;
+  font-weight: normal;
+}
+
 .main-realhouse {
+  display: flex;
+  min-height: 256px;
   color: #ffffff;
   text-align: center;
   background-color: #81b3d2;
 }
+
+.realhouse-text {
+  width: 33.33%;
+  margin-top: 47px;
+  margin-left: 59px;
+  margin-right: 59px;
+  padding-bottom: 20px;
+  text-align: center;
+  color: white;
+}
+
+.realhouse-sity {
+  width: 155px;
+  margin: auto;
+  margin-bottom: 21px;
+  text-align: center;
+  font-size: 21px;
+  line-height: 21px;
+}
+
+.realhouse-n1 {
+  display: block;
+  margin-bottom: 19px;
+  font-weight: normal;
+}
+
+.realhouse-Sedona {
+  max-width: 100%;
+  margin: 0;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: normal;
+}
+
+.main-firstimage {
+  width: 66.66%;
+  max-height: 256px;
+  background-color: #a5907e;
+}
+
+.main-firstimage img {
+  width: 100%;
+  height: 100%;
+}
+
 .main-house {
   color: #000000;
   text-align: center;
