--- a/css/style.css
+++ b/css/style.css
@@ -727,7 +727,7 @@ iframe {
 }
 
 .field-praicing legend {
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .field-praicing label {
@@ -819,4 +819,131 @@ iframe {
 .filter-category input[type="submit"]:focus {
   background-color: #fff;
   color: #000;
+}
+
+.main-form-founded {
+  display: flex;
+  padding-left: 6%;
+  padding-right: 6%;
+  border-bottom: 1px solid #e5e5e5;
+  height: 86px;
+}
+
+.column1 {
+  width: 135px;
+  margin-top: 31px;
+  font-size: 21px;
+  font-weight: 26px;
+  color: black;
+  font-weight: bold;
+}
+
+.column2 {
+  flex-grow: 1;
+  padding-left: 30px;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: normal;
+  color: black;
+}
+
+.column2 span {
+  float: left;
+  margin-right: 38px;
+  margin-top: 36px;
+}
+
+.column2 li {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 33px;
+  margin-top: 36px;
+}
+
+.column2 li:last-child {
+  margin-right: 0;
+}
+
+.column2 a {
+  font-size: 12px;
+	color: rgb(202,202,202);
+  text-decoration: none;
+	border-bottom: 1px dotted #81b3d2;
+}
+
+.column2 a:active {
+  color: #81b3d2;
+	border: none;
+}
+
+.column2 a[href]:hover,
+.column2 a[href]:focus{
+	color: #81b3d2;
+	border-bottom: 1px dotted #81b3d2;
+	outline: none;
+}
+
+.column2 a[href]:active{
+	color: #000;
+	border: none;
+}
+
+.column3 {
+  width: 135px;
+  flex-shrink: 0;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: normal;
+}
+
+.column2 ul,
+.column3 ul {
+  margin: 0;
+	padding: 0;
+  list-style: none;
+  font-size: 0px;
+}
+
+.column3 ul {
+  text-align: right;
+}
+
+.column3 li {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 39px;
+}
+
+.column3 li:first-child {
+  margin-right: 12px;
+}
+
+.column3 .arrow {
+  fill: #cacaca;
+}
+
+.column3 .current {
+  fill: #81b3d2;
+}
+
+.column3 .arrow:not(.current):hover {
+  fill: #231F20;
+}
+
+.column3 path:active {
+  fill: #81b3d2;
+}
+
+.housing-item {
+  display: flex;
+  padding-left: 6%;
+  padding-right: 6%;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.footer-catalog {
+  display: flex;
+  height: 120px;
+  width: 100%;
+  background-color: rgba(255,255,255,0.9);
 }
