--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
   font-weight: 400;
   color: #ffffff;
   text-transform: uppercase;
-
   background-color: #f2f2f2;
 }
 
@@ -18,6 +17,7 @@ body {
   max-width: 1200px;
   background-color: white;
   margin: 0 auto;
+  box-shadow: 0px 5px 15px 1px rgba(0, 1, 1, 0.2);
 }
 
 .visually-hidden {
@@ -382,7 +382,10 @@ a.search-hotel-button:active {
   position: absolute;
   left: 50%;
   z-index: 1;
-  display: block;
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: opacity .9s, max-height .9s;
   padding: 55px;
   width: 568px;
   transform: translateX(-50%);
@@ -391,6 +394,12 @@ a.search-hotel-button:active {
   font-weight: bold;
   background-color: #fff;
   box-shadow: 0px 7px 15px 0px rgba(0, 1, 1, 0.15);
+}
+
+.search-data .popup {
+  max-height: 395px;
+  opacity: 1;
+  transition: opacity .1s, max-height .1s;
 }
 
 .search-menu .input-data {
@@ -458,7 +467,7 @@ a.search-hotel-button:active {
   margin-right: 41px;
 }
 
-.numberofviziters .children {
+.numberofviziters .childrens {
   margin-right: 26px;
   margin-left: 48px;
 }
@@ -533,7 +542,7 @@ a.search-hotel-button:active {
   color: rgba(255, 255, 255, 0.3);
 }
 
-iframe {
+.map iframe {
   position: absolute;
 }
 
@@ -556,20 +565,19 @@ iframe {
 
 .footer-social ul {
   padding: 0;
-  padding-top: 12px;
-  padding-right: 5px;
   margin: 0;
   list-style: none;
-  font-size: 0;
 }
 
 .footer-social li {
   display: inline-block;
   margin-left: 6px;
+  vertical-align: top;
 }
 
 .footer-social .socialbutton {
   display: inline-block;
+  vertical-align: top;
   width: 46px;
   height: 48px;
   background-color: #81b3d2;
@@ -577,25 +585,29 @@ iframe {
   background-position: center;
 }
 
-.footer-social .socialbutton:hover,
-.footer-social .socialbutton:focus  {
+.tw {
+  padding: 17px 15px;
+}
+
+.fb {
+  padding: 13px 17px;
+}
+
+.yt {
+  padding: 16px 13px;
+}
+
+.socialbutton a {
+  outline: none;
+}
+
+.socialbutton:hover,
+.socialbutton:focus {
   background-color: #669ec0;
 }
 
-.footer-social .socialbutton:active {
+.socialbutton:active {
   background-color: #5496bd;
-}
-
-.footer-social .social-twitter {
-   background-image: url("../img/twitter.svg");
-}
-
-.footer-social .social-facebook {
-  background-image: url("../img/fb-icon.svg");
-}
-
-.footer-social .social-youtube {
-  background-image: url("../img/youtube.svg");
 }
 
 .visitsedona {
@@ -839,25 +851,32 @@ iframe {
 }
 
 .column2 {
+  display: flex;
   flex-grow: 1;
   padding-left: 30px;
   font-size: 12px;
   line-height: 18px;
   font-weight: normal;
   color: black;
+  align-items: center;
+  padding-top: 6px;
 }
 
 .column2 span {
-  float: left;
+  display: inline-block;
   margin-right: 38px;
-  margin-top: 36px;
+  vertical-align: top;
+}
+
+.column2 ul {
+  display: inline-block;
+  vertical-align: top;
 }
 
 .column2 li {
   display: inline-block;
   vertical-align: top;
   margin-right: 33px;
-  margin-top: 36px;
 }
 
 .column2 li:last-child {
@@ -888,23 +907,6 @@ iframe {
 	border: none;
 }
 
-/*.column2 a:active {
-  color: #81b3d2;
-	border: none;
-}
-
-.column2 a[href]:hover,
-.column2 a[href]:focus {
-	color: #81b3d2;
-	border-bottom: 1px dotted #81b3d2;
-	outline: none;
-}
-
-.column2 a[href]:active{
-	color: #000;
-	border: none;
-}*/
-
 .column3 {
   width: 135px;
   flex-shrink: 0;
@@ -918,7 +920,6 @@ iframe {
   margin: 0;
 	padding: 0;
   list-style: none;
-  font-size: 0px;
 }
 
 .column3 ul {
