--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ a.search-hotel-button:active {
 
 .footer-social li {
   display: inline-block;
-  margin-left: 6px;
+  margin-left: 3px;
   vertical-align: top;
 }
 
@@ -587,14 +587,17 @@ a.search-hotel-button:active {
 
 .tw {
   padding: 17px 15px;
+  fill: #FFF;
 }
 
 .fb {
   padding: 13px 17px;
+  fill: #FFF;
 }
 
 .yt {
   padding: 16px 13px;
+  fill: #FFF;
 }
 
 .socialbutton a {
@@ -606,8 +609,10 @@ a.search-hotel-button:active {
   background-color: #669ec0;
 }
 
-.socialbutton:active {
+.socialbutton:active,
+.socialbutton:active svg {
   background-color: #5496bd;
+  fill: rgba(255, 255, 255, 0,3);
 }
 
 .visitsedona {
