--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,9 @@ a.search-hotel-button:active {
 
 .map iframe {
   position: absolute;
+  height: 585px;
+  width: 100%;
+  border: 0;
 }
 
 .map {
